--- a/KingAcadamey/KingAcadamey/KingAcadamey.csproj
+++ b/KingAcadamey/KingAcadamey/KingAcadamey.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\HnbService\" />
+  </ItemGroup>
+
 </Project>
